@@ -6,6 +6,11 @@ import com.nhnacademy.member_server.entity.member.Status;
 import com.nhnacademy.member_server.feign.OrderFeignClient;
 import com.nhnacademy.member_server.repository.GradeRepository;
 import com.nhnacademy.member_server.repository.MemberRepository;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import net.javacrumbs.shedlock.spring.annotation.SchedulerLock;
@@ -18,12 +23,6 @@ import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
 
 @Slf4j
 @Component
@@ -130,6 +129,6 @@ public class GradeScheduler {
                 return grade;
             }
         }
-        return sortedGrades.get(sortedGrades.size() - 1);
+        return sortedGrades.getLast();
     }
 }
