@@ -1,13 +1,12 @@
 package com.nhnacademy.member_server.feign;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
 import com.nhnacademy.member_server.dto.cartResponse.GetBookResponse;
 import com.nhnacademy.member_server.feign.fallback.BookFeignClientFallbackFactory;
+import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-
-import static org.assertj.core.api.Assertions.assertThat;
 
 class BookFeignClientFallbackFactoryTest {
 
@@ -27,10 +26,10 @@ class BookFeignClientFallbackFactoryTest {
         assertThat(responses).hasSize(2);
 
         // 첫 번째 더미 데이터 검증
-        GetBookResponse response1 = responses.get(0);
+        GetBookResponse response1 = responses.getFirst();
         assertThat(response1.bookId()).isEqualTo(1L);
         assertThat(response1.title()).isEqualTo("상품 정보를 불러올 수 없습니다.");
-        assertThat(response1.price()).isEqualTo(0);
+        assertThat(response1.price()).isZero();
         assertThat(response1.image()).isNull();
     }
 
